# RP_Greenland

./: .gitignore  Untitled-1.ipynb  dates_to_remove.txt  hyperparameters.txt  pyproject.toml  requirements_complete.txt  requirements_small.txt
AWS_Scripts/: benchmarks.py  config.ini  decision_tree_model.py  elasticnet_regression_model.py  functions_training_pipeline.py  functions_training_pipeline_pyspark.py  lasso_regression_model.py  linear_regression_model.py  linear_regression_model_no_xy.py  linear_regression_model_pyspark.py  linear_regression_model_without_log.py  prep_model_training_data.py  pyspark_functions_training_pipeline.py  qq_plots.py  random_forest_model.py  random_forest_model_multiprocessing.py  remove_data_spatially.py  ridge_regression_model.py  ridge_regression_model_without_log.py  temp_spark.ipynb  xgboost_model.py
Data/: albedo_bb_planar_sw.tif
Models/: ElasticNetRegression.pkl  LassoRegression.pkl  LinearRegression.pkl  RidgeRegression.pkl
Models_v1/: RidgeRegression.pkl  RidgeRegression_WithoutLog.pkl
Models_v2/: ElasticNetRegression.pkl  LinearRegression.pkl  LinearRegression_NoXY.pkl  LinearRegression_WithoutLog.pkl  RandomForest.pkl
Models_v3/: DecisionTree.pkl  ElasticNetRegression.pkl  LassoRegression.pkl  LinearRegression.pkl  LinearRegression_NoXY.pkl  RidgeRegression.pkl  XGBoost.pkl
Scripts/: 00_temp_testing.ipynb  01_convert_mw_NetCDF_to_Tif.ipynb  01_data_exploration.ipynb  02_data_transformation_testing.ipynb  02_interpolation_transform.ipynb  03_convert_mw_NetCDF_to_Tif.ipynb  03_data_to_pandas_table.ipynb  data_mw.tif  (+44 more)
(+143 files in other folders)
