[tool.poetry]
name = "rp-greenland"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rp_greenland"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
xarray = "^2022.6.0"
cftime = "1.0.4.2"
rioxarray = "^0.12.2"
netCDF4 = "^1.6.1"
matplotlib = "^3.6.0"
rasterio = "^1.3.2"
GDAL = "3.0.4"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
